iodata (0.18) unstable; urgency=low

  * tracking location in the tokenizer

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 28 Jul 2011 15:05:57 +0300

iodata (0.17) unstable; urgency=low

  * using qt4 qmake
  * taking version number from changelog
  * iodata-type-to-c++ compiler
  * versioned dependency

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 17 Feb 2011 13:57:31 +0200

iodata (0.0.16) unstable; urgency=low

  * export read_file_to_string()
  * added some destructors, fixed memory leaks

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Mon, 27 Dec 2010 12:24:03 +0200

iodata (0.0.15) unstable; urgency=low

  * Fixes: NB#187227

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 04 Nov 2010 11:23:26 +0200

iodata (0.0.14) unstable; urgency=low

  * qmlog inteface changed

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Sun, 31 Oct 2010 18:42:47 +0200

iodata (0.0.13) unstable; urgency=low

  * copyrgiht files
  * gitorious+meego stuff

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Fri, 20 Aug 2010 16:22:11 +0300

iodata (0.0.12) unstable; urgency=low

  * Fixes: NB#186266 - timed linked to Qt GUI and X11 libraries

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Wed, 18 Aug 2010 15:22:39 +0300

iodata (0.0.11) unstable; urgency=low

  * Fixed: NB#168911 - Timed updates time config and alarm queue files in unsafe manner
  * Fixed: NB#177670 - iodata fails to build with cs2009q3 compiler

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 06 Jul 2010 13:03:10 +0300

iodata (0.0.10) unstable; urgency=low

  * class storage, reading and writing files
  * fixing __NAMES in header files (like 168897)
  * using the new qmlog library to print log messages
  * Fixed: NB#169281 - cute-timed overwrites queue file even if the contents do not change
  * Fixed: NB#168911 - Timed updates time config and alarm queue files in unsafe manner

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 01 Jun 2010 13:53:50 +0300

iodata (0.0.9) unstable; urgency=low
